--- a/DepartmentService/src/main/resources/application.properties
+++ b/DepartmentService/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-#eureka.instance.hostname= = localhost
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.instance.hostname= = 127.0.0.1
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.application.zipkin.base-url =http://localhost:9411/zipkin/
